[package]
name = "multistr"
version = "0.5.0"
authors = ["Clar Charr <clar@charr.xyz>"]
repository = "https://github.com/clarcharr/multistr"
documentation = "https://clarcharr.github.io/multistr/multistr/"
description = "Store multiple strings in the same heap buffer."
readme = "README.md"
license-file = "LICENSE"
exclude = [".gitignore"]

[dependencies]
bow = "1.0"
extra-default = "0.2"
len-trait = { version = "0.6", features = ["std"] }
push-trait = { version = "0.5", features = ["std"] }
quickcheck = "0.4"
void = "1.0"

[features]
inclusive_range = []
