[package]
name = "multistr"
version = "0.5.1"
authors = ["Clar Charr <clar@charr.xyz>"]
repository = "https://github.com/clarcharr/multistr"
documentation = "https://clarcharr.github.io/multistr/multistr/"
description = "Store multiple strings in the same heap buffer."
readme = "README.md"
license-file = "LICENSE"
exclude = [".gitignore"]

[dependencies]
bow = "1.0"
extra-default = "0.2"
len-trait = { version = "0.6", features = ["std"] }
push-trait = { version = "0.6", features = ["std"] }
quickcheck = { version = "0.4", optional = true }
void = "1.0"

[dev-dependencies]
quickcheck = "0.4"

[features]
inclusive_range = []
